Create LIST/GET/POST/UPDATE APIs for sizes
